<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UIUC Campus Events</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="month">Mon</string>
    <string name="day">00</string>
    <string name="time">12:00 to 2:00</string>
    
    <string name="title_activity_detail">Event Detail Information</string>
    <string name="urlText">http://www.com</string>
    <string name="dateLabel">Date:</string>
    <string name="timeLabel">Time:</string>
    <string name="sponsorLabel">Sponsor:</string>
    <string name="descriptionLabel">Description:</string>
    <string name="locationLabel">Location:</string>
    <string name="costLabel">Cost:</string>
    
    <string name="title_activity_about">About</string>
    <string name="appDescription">
        This app was designed and made by students at the University of Illinois Urbana-Champaign in the Association for Computing Machinery\'s SIGMobile Group to provide a mobile version of the online school calendar to other students and faculty.
    </string>
    <string name="devLabel">Developers:</string>
    <string name="developers">Paul Rachwalski, Kai Huang, Atul Nambudiri</string>
    <string name="license">Protected under GNU General Public License, v. 3</string>

</resources>
