<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" 
    tools:context=".AboutActivity" >

	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:isScrollContainer="true">

	    <TextView
	        android:id="@+id/description"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="15dp"
	        android:textSize="17sp"
	        android:text="@string/appDescription" />
	    
	    <TextView
	        android:id="@+id/devLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/description"
	        android:layout_centerInParent="true"
	        android:layout_marginTop="18dp"
	        android:textSize="20sp"
	        android:text="@string/devLabel" />
	    
	    <TextView
	        android:id="@+id/developers"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/devLabel"
	        android:layout_centerInParent="true"
	        android:layout_marginTop="5dp"
	        android:textSize="17sp"
	        android:text="@string/developers" />
	    
	    <TextView
	        android:id="@+id/license"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/developers"
	        android:layout_centerInParent="true"
	        android:layout_marginTop="20dp"
	        android:textSize="18sp"
	        android:text="@string/license" />

</RelativeLayout>
</ScrollView>