<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:isScrollContainer="true">
	
	    <TextView
	        android:id="@+id/titleText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:layout_alignParentTop="true"
	        android:textSize="27sp"
	        android:text="@string/urlText" />
	    
	    <TextView
	        android:id="@+id/dateLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/titleText"
	        android:layout_alignParentLeft="true"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="10dp"
	        android:textSize="20sp"
	        android:text="@string/dateLabel" />
	    <TextView
	        android:id="@+id/dateText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/dateLabel"
	        android:layout_below="@id/titleText"
	        android:layout_marginTop="10dp"
	        android:textSize="17sp"
	        android:text="@string/dateLabel" />
	    
	    <TextView
	        android:id="@+id/timeLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_below="@id/dateText"
	        android:layout_alignParentLeft="true"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="10dp"
	        android:textSize="20sp"
	        android:text="@string/timeLabel" />
	    <TextView
	        android:id="@+id/timeText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/timeLabel"
	        android:layout_below="@id/dateText"
	        android:layout_marginTop="10dp"
	        android:textSize="17sp"
	        android:text="@string/timeLabel" />
	
	    <TextView
	        android:id="@+id/sponsorLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_below="@id/timeText"
	        android:layout_alignParentLeft="true"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="10dp"
	        android:textSize="20sp"
	        android:text="@string/sponsorLabel" />
	    <TextView
	        android:id="@+id/sponsorText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/sponsorLabel"
	        android:layout_below="@id/timeText"
	        android:layout_marginTop="10dp"
	        android:textSize="17sp"
	        android:text="@string/sponsorLabel" />
	    
	    <TextView
	        android:id="@+id/locationLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_below="@id/sponsorText"
	        android:layout_alignParentLeft="true"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="10dp"
	        android:textSize="20sp"
	        android:text="@string/locationLabel" />
	    <TextView
	        android:id="@+id/locationText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/locationLabel"
	        android:layout_below="@id/sponsorText"
	        android:layout_marginTop="10dp"
	        android:textSize="17sp"
	        android:text="@string/locationLabel" />
	    
	    <TextView
	        android:id="@+id/costLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_below="@id/locationText"
	        android:layout_alignParentLeft="true"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="10dp"
	        android:textSize="20sp"
	        android:text="@string/costLabel" />
	    <TextView
	        android:id="@+id/costText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/costLabel"
	        android:layout_below="@id/locationText"
	        android:layout_marginTop="10dp"
	        android:textSize="17sp"
	        android:text="@string/costLabel" />
	    
	    <TextView
	        android:id="@+id/descLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_below="@id/costText"
	        android:layout_alignParentLeft="true"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="10dp"
	        android:textSize="20sp"
	        android:text="@string/descriptionLabel" />
	    <TextView
	        android:id="@+id/descText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/descLabel"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="15dp"
	        android:textSize="17sp"
	        android:text="@string/descriptionLabel" />
	    
	</RelativeLayout>
</ScrollView>
